# silly-snippets

./: .gitattributes  .gitignore  README.md  requirements.txt  test.py
bar/: 3d6_plus.py  3d6_xp.py  3d6kl.py  d6_explode_implode.py  d6_pool.py  dEskills.py  daro_gonzo.py  roller1.py  roller2.py  stats.py  succ.py  var_dice.py
baz/: room.py
doc/: materials.js  mon.xlsx  notes.xlsx  stats.py
foo/: AnyDice.txt  ascii_to_bmp.py
foo/maps_ascii/: omega_world.txt
html/: autoBattle.html
map/: ascii_to_bmp.py  maps
map/maps_ascii/: Cassida.txt  adom_world.txt  dragon.txt  island.txt
pv/: CMakeLists.txt  fail  matrixMult.cu  vectorSum.cu
pv/matrix/: CMakeLists.txt  matrixMult.cu
pv/vector/: CMakeLists.txt  vectorSum.cu
two/: compare.py
